--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="js/index.js" defer></script>
+    <script type="module" src="js/index.js" defer></script>
   </head>
   <body>
     <h1 class="snt-form_heading">Like our blogs ?</h1>
@@ -126,7 +126,7 @@
         </svg>
       </span>
     </form>
-    <p class="spinner">loading...</p>
+    <p class="loading-msg">loading...</p>
     <section class="snt-form_message">
       <h3>Thank you for subscribing to our newsletter</h3>
       <svg
